app/assets/stylesheets/hyku.scss
/* ... */
.hyc-bugs {
    margin-top: 10px;
}

.hyc-bl-results {
    margin: 2em 0 2em;
}

.hyrax-collections-show {
    .document-metadata {
        dd {
            word-break: break-all;
        }
    }

    table.table-striped {
        th {
            &:not(:nth-child(1)):not(:nth-child(2)) {
                text-align: center;
            }
            border-top: none;
        }
    }
}

dd {
    /* margin-bottom: .5rem; */
    margin-left: 0;
    margin-bottom: 0;
}

// collections gallery view
#documents {
    // hide the bookmark button
    .caption-area {
        input[name="commit"] {
            display: none;
        }
    }
}

// pagination
.hyc-bl-pager {
    .pagination {
        display: flex;
    }
}

@media (max-width: 768px) {
    .hyc-banner {
        .hyc-bugs {
            flex-wrap: wrap;
        }
    }
}
/* End Collection show page */

/* blacklight advanced search */

@media only screen and (min-width: 640px) {
    form.advanced .form-group > label {
        text-align: left;
    }
}
/* End blacklight advanced search */

// Style instruction hints for file inputs with left border accent
.form-group .help-block.border-left-accent {
    border-left: 3px solid #007bff;
    padding-left: 1rem;
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
    margin-bottom: 0.75rem;
    font-size: 0.875rem;
    color: #6c757d;
}

